--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
             android:value="@string/facebook_app_id"/>
 
         <activity
-            android:name=".log_in.LoginActivity"
+            android:name=".LoginActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -31,9 +31,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".log_in.TabbedConteinerActivity"
+            android:name=".TabbedConteinerActivity"
             android:label="@string/app_name"
-            android:parentActivityName=".log_in.LoginActivity">
+            android:parentActivityName=".LoginActivity">
         </activity>
     </application>
 
